RESOLVED FIXED220072
[iOS] REGRESSION(r265088): "pointerdown" doesn't fire using a trackpad after double-tapping
https://bugs.webkit.org/show_bug.cgi?id=220072
Summary [iOS] REGRESSION(r265088): "pointerdown" doesn't fire using a trackpad after ...
Devin Rousso
Reported 2020-12-21 15:07:28 PST
Attachments
[HTML] reduction (680 bytes, text/html)
2020-12-21 15:07 PST, Devin Rousso
no flags
Patch (3.06 KB, patch)
2020-12-21 15:22 PST, Devin Rousso
no flags
[HTML] LayoutTest to add after bug 220074 is resolved (1011 bytes, text/html)
2020-12-21 15:26 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-12-21 15:22:39 PST
Created attachment 416636 [details] Patch My understanding of UIKit gesture recognizers (and how we use them) and the purpose behind `m_activePointerIdsToCapturingData` is possibly lacking, so this may not be the best approach, but it seems logical that we would remove entries for touch interactions from `m_activePointerIdsToCapturingData` once the interaction finishes (e.g. `"touchend"`).
Devin Rousso
Comment 2 2020-12-21 15:26:17 PST
Created attachment 416638 [details] [HTML] LayoutTest to add after bug 220074 is resolved I'd like to add a test for this, but after talking with @Tim Horton we do not have a way to generate mouse interactions on iOS from within a LayoutTest. I've created bug 220074 to hopefully add this in the next few days :) In the meantime, here's the test that I would've added.
EWS
Comment 3 2021-01-06 15:29:26 PST
Committed r271216: <https://trac.webkit.org/changeset/271216> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416636 [details].
Note You need to log in before you can comment on or make changes to this bug.